# Ragnificent

./: .env.example  .gitignore  20260129_Changelog.md  Dockerfile  LICENSE  README.md  config.docker.yaml  config.yaml  dataflow.mermaid  docker-compose.yml  embedding_presets.yaml  idea.md  models_catalog.yaml  pyproject.toml  watcher.py
app/: cli.py  knowledge_trust.py  policy.py  security.py
app/api/: query_engine.py  server.py
app/config/: embedding_presets.py  loader.py  models_catalog.py  schema.py
app/engines/: base.py  epub_extractor.py  image_extractor.py  ocr_base.py  ocr_my_pdf.py  ocr_ollama.py  ocr_paddle.py  ocr_tesseract.py  pdf_engine.py  pdf_pymupdf.py  scanned_pdf_extractor.py
app/gui/: routes.py
app/ingest/: pipeline.py
app/providers/: anthropic_provider.py  base.py  factory.py  ollama.py  openai_provider.py  reranker.py
app/services/: __init__.py  corpus_service.py  source_receipt_service.py
app/state/: db.py  schema.sql  stats.py
app/utils/: hashing.py  logging.py
app/vector/: qdrant_client.py
docs/: agent-integration.md  ragnificent-bootstrap.yaml  voltron-repository-docs.corpus.yaml  voltron-repository-docs.md
scripts/: evaluate.py  pull_ollama_models.py
scripts/linux/: init_state_db.sh  run.sh  setup.sh
scripts/windows/: run.ps1  (+4 more)
tests/: test_agenda_routes.py  test_corpus_service.py  test_health_route.py  test_ingest_api.py  test_integration.py  test_knowledge_trust.py  test_local_only_policy.py  test_openai_provider.py  test_qdrant_client.py  test_query_engine_embeddings.py  test_query_route_policy.py  test_source_receipts_security.py
(+24 files in other folders)
