[tool.poetry]
name = "ragnificent"
version = "0.1.0"
description = "Corpus-isolated local and cloud RAG service with a web UI, REST API, and per-corpus ingest settings."
authors = ["SweetingTech"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
pyyaml = "^6.0.1"
qdrant-client = "^1.9.0"
pymupdf = "^1.24.0"
ollama = "^0.3.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
pytesseract = "^0.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
